--- a/vue-fundamentals/main.css
+++ b/vue-fundamentals/main.css
@@ -102,6 +102,10 @@ li input {
   margin: 0.5rem 0;
 }
 
+.btn-container .btn {
+  margin: 0 5px;
+}
+
 .btn {
   border: none;
   border-radius: 3px;
@@ -120,6 +124,7 @@ li input {
 
 .btn[disabled]:hover {
   background: #606f7b;
+  cursor: not-allowed;
 }
 
 .btn-primary {
